# crc

./: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tree-sitter.json
.github/workflows/: backend-differential.yml  macos-kqueue.yml
docs/rfcs/: 0001-core-coroutine-contract.md  0002-waker-contract.md  0003-backend-core-and-net-receive-contract.md
docs/superpowers/plans/: 2026-07-13-tree-sitter-cr-compiler-implementation.md  2026-07-14-cr-core-abi-v3-stage-2-implementation.md  2026-07-14-cr-coroutine-v3-stage-0-1-implementation.md  2026-07-14-cr-static-await-stage-3-implementation.md  2026-07-15-cr-coroutine-cfg-stage-4-implementation.md  2026-07-15-cr-waker-reference-executor-stage-5-implementation.md  2026-07-16-cr-backend-validation-stage-6-implementation.md
docs/superpowers/specs/: 2026-07-13-tree-sitter-cr-compiler-design.md  2026-07-14-cr-core-abi-v3-stage-2-design.md  2026-07-14-cr-coroutine-architecture-v3-design.md  2026-07-14-cr-static-await-stage-3-design.md  2026-07-15-cr-coroutine-cfg-stage-4-design.md  2026-07-15-cr-waker-reference-executor-stage-5-design.md  2026-07-16-cr-backend-validation-stage-6-design.md  2026-07-17-cr-backend-differential-stage-6-task-9-design.md  2026-07-17-cr-backend-generated-project-stage-6-task-11-design.md  2026-07-17-cr-backend-stable-v1-stage-6-task-10-design.md  2026-07-17-cr-stage-6-final-validation-task-13-design.md  2026-07-17-cr-wasm-backend-stage-6-task-12-design.md
grammar/: grammar.js
grammar/fixtures/: extensions.cr
grammar/src/: grammar.json  node-types.json  parser.c
src/: await_plan.rs  backend_abi.rs  c_declaration_env.rs  c_emitter.rs  c_static_plan.rs  context_layout.rs  control_flow.rs  coroutine.rs  coroutine_opt.rs  executor_runtime.rs  header_emitter.rs  lib.rs  liveness.rs  main.rs  preprocessor.rs  runtime_abi.rs  scope_exit.rs  semantic.rs  slot_liveness.rs  symbol_index.rs  syntax.rs  target_layout.rs  waker_abi.rs
src/backend_runtime/: common.rs  epoll.rs  iocp.rs  kqueue.rs  memory.rs  mod.rs  net.rs
src/cli/: mod.rs
src/config/: mod.rs
src/incremental/: mod.rs
src/template/: mod.rs
src/template/templates/: .gitignore  CMakeLists.txt  crc.toml  main.c  main.cr  main.hr  meson.build
src/watch/: mod.rs
test/corpus/: extensions.txt
test_proj/: crc.toml
tests/: abi_v3_layout.rs  abi_v3_protocol.rs  backend_abi.rs  backend_differential.rs  backend_epoll.rs  backend_iocp.rs  backend_kqueue.rs  backend_memory.rs  backend_net_awaitable.rs  context_layout_codegen.rs  coroutine_contract.rs  coroutine_optimization.rs  generated_project.rs  reference_executor.rs  reference_executor_threaded.rs  static_await_codegen.rs  static_await_project.rs  target_layout_model.rs  waker_registration.rs  waker_v1_layout.rs  waker_v1_protocol.rs  wasm_backend_project.rs  wasm_generated_project.rs
tests/fixtures/planning/: abi-v3-baseline.c  (+1 more)
(+28 files in other folders)
